fixing horizontal scroll issue

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,13 +4,13 @@
   padding: 92px 0 0;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1023px) {
   .footer {
     padding-top: 88px;
   }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 767px) {
   .footer {
     padding-top: 64px;
   }
