--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -9,7 +9,7 @@
   text-decoration: none;
 }
 
-@media (max-width: 320px) {
+@media (max-width: 767px) {
   .header__lang-link {
     font-size: 1.125rem;
     line-height: 1.11em;
