--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,7 +6,7 @@
   align-items: center;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1279px) {
   .header {
     padding-bottom: 48px;
   }
