--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -8,19 +8,19 @@
   grid-template-areas: ". info";
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1279px) {
   .intro {
     grid-template-columns: 48px 690px;
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1023px) {
   .intro {
     grid-template-columns: 24px 720px;
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 767px) {
   .intro {
     grid-template-columns: 16px 288px;
   }
