--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -12,13 +12,13 @@
   justify-items: center;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1279px) {
   .lead {
     grid-template-columns: 928px;
   }
 }
 
-@media (max-width: 960px) {
+@media (max-width: 1023px) {
   .lead {
     grid-template-columns: 24px 720px 24px;
     grid-template-areas:
