--- a/blocks/main/main.css
+++ b/blocks/main/main.css
@@ -1,16 +1,18 @@
 .main {
+  margin: 0;
+  padding: 0;
   display: grid;
   justify-content: center;
   gap: 92px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1023px) {
   .main {
     gap: 88px;
   }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 767px) {
   .main {
     gap: 64px;
   }
